--- a/tsconfig.json
+++ b/tsconfig.json
@@ -34,7 +34,7 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts"
-  ],
+, "lib/prisma/users.js", "pages/api/users/index.js"  ],
   "exclude": [
     "node_modules"
   ]
