--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.16",
     "@prisma/client": "^4.11.0",
     "@types/node": "18.14.6",
     "@types/react": "18.0.28",
